--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ Flask==1.0.2
 xmlrunner==1.7.7
 pytest==6.0.1
 requests==2.24.0
+click==8.0.4
+Flask==2.0.3
+itsdangerous==2.1.2
 Jinja2==3.1.1
+MarkupSafe==2.1.1
+Werkzeug==2.0.3
